--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo-google-fonts/cairo": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/montserrat": "^0.2.2",
+    "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
